users, public vis and regex
